--- a/package.json
+++ b/package.json
@@ -11,16 +11,19 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.9.2",
+    "atob": "^2.1.2",
     "axios": "^1.6.0",
     "boxicons": "^2.1.4",
     "formik": "^2.4.5",
-    "js-cookie": "^3.0.5",
     "jwt-decode": "^3.1.2",
+    "query-string": "^8.1.0",
     "react": "^18.2.0",
+    "react-cookie": "^6.1.1",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "tailwindcss": "^3.3.6",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.2"
   },
@@ -47,8 +50,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "tailwindcss": "^3.3.3"
   }
 }
